# kindling

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  copier.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
notes/: pm-e2e-test.md
notes/ideas/: github-pm-integration.md
project/: .copier-answers.yml.jinja  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  AGENTS.md.jinja  CLAUDE.md.jinja  README.md.jinja  nx.json  package.json.jinja  pyproject.toml.jinja  release-please-config.json.jinja  tsconfig.base.json
project/.claude/skills/forge/: SKILL.md
project/.github/: pull_request_template.md
project/.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  idea.yml  slice.yml  spike.yml  stage.yml
project/.github/workflows/: ci.yml.jinja  release.yml.jinja
project/api/: project.json.jinja  pyproject.toml.jinja
project/api/src/{{package_name}}/: __init__.py.jinja  app.py  app.py.jinja
project/api/src/{{package_name}}/adapters/outbound/: __init__.py
project/api/src/{{package_name}}/application/: app.py.jinja  config.py
project/api/src/{{package_name}}/domain/: health.py
project/api/src/{{package_name}}/ports/inbound/: __init__.py
project/api/tests/: test_health.py.jinja
project/docs/: architecture.md.jinja  full-stack.md  full-stack.md.jinja  productionalize.md  project-management.md  ubiquitous-language.md
project/docs/decisions/: 0000-template.md
project/scripts/: bootstrap-pm.sh.jinja
project/tests/: test_{{package_name}}.py.jinja
project/ui/: index.html.jinja  package.json  tsconfig.app.json  vite.config.ts
project/ui/src/: App.vue  main.ts
tests/: conftest.py  test_docs.py  test_full_stack.py  test_generate.py  test_github_pm.py  test_hexagonal.py  test_update.py
(+3 files in other folders)
