[project]
name = "kindling"
version = "0.1.0"
description = "Copier template for bootstrapping Python projects"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "copier>=9.0.0",
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
