[project]
name = "kindling"
version = "0.5.2"
description = "🪵 Copier template for bootstrapping opinionated Python projects"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "copier>=9.0.0",
    "pytest>=9.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1",
]

[tool.ty.environment]
python-version = "3.13"
root = ["."]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
